View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0026872 | Open CASCADE | OCCT:Coding | public | 2015-11-15 09:08 | 2016-04-20 15:51 |
Reporter | abv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.0.0 | Fixed in Version | 7.0.0 | ||
Summary | 0026872: Coding - pointless instantiations of local variables in BinTools | ||||
Description | Several methods of classes in BinTools package start with declaration of local variable "Standard_SStream aMsg" which is used only in error handling (i.e. never in normal situations). This does not make any sense and causes execution of unnecessary code at every call. These vars should be instantiated locally only in places where they are used. | ||||
Steps To Reproduce | N/A | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR26872 has been created by abv. SHA-1: 4c31f70d97701ad08d80f33deb966e0b5b051ddd Detailed log of new commits: Author: abv Date: Sun Nov 15 09:11:52 2015 +0300 0026872: Coding - pointless instantiations of local variables in BinTools Instantiations of local stringstream variables used in error handling moved from upper function scope to places where they are actually needed |
|
Fix pushed to CR26872, please review |
|
Please check compilation, testing is not needed. |
|
Dear BugMaster, Branch CR26872 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: 4c31f70d97701ad08d80f33deb966e0b5b051ddd Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS: 128 (129 on master) products component: Linux: 39 (39 on master) Windows: 0 (0 on master) |
|
Branch CR26872 has been deleted by kgv. SHA-1: 4c31f70d97701ad08d80f33deb966e0b5b051ddd |
occt: master 4525373b 2015-11-15 06:11:52 Committer: bugmaster Details Diff |
0026872: Coding - pointless instantiations of local variables in BinTools Instantiations of local stringstream variables used in error handling moved from upper function scope to places where they are actually needed |
Affected Issues 0026872 |
|
mod - src/BinTools/BinTools_Curve2dSet.cxx | Diff File | ||
mod - src/BinTools/BinTools_CurveSet.cxx | Diff File | ||
mod - src/BinTools/BinTools_ShapeSet.cxx | Diff File | ||
mod - src/BinTools/BinTools_SurfaceSet.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2015-11-15 09:08 | abv | New Issue | |
2015-11-15 09:08 | abv | Assigned To | => kgv |
2015-11-15 09:12 | git | Note Added: 0048193 | |
2015-11-15 09:14 | abv | Note Added: 0048194 | |
2015-11-15 09:14 | abv | Status | new => resolved |
2015-11-15 09:14 | abv | Steps to Reproduce Updated | |
2015-11-15 10:14 | kgv | Note Added: 0048195 | |
2015-11-15 10:14 | kgv | Assigned To | kgv => bugmaster |
2015-11-15 10:14 | kgv | Status | resolved => reviewed |
2015-11-16 12:54 |
|
Assigned To | bugmaster => apv |
2015-11-16 16:41 |
|
Test case number | => Not needed |
2015-11-17 11:27 |
|
Note Added: 0048274 | |
2015-11-17 11:27 |
|
Assigned To | apv => bugmaster |
2015-11-17 11:27 |
|
Status | reviewed => tested |
2015-11-20 12:07 | bugmaster | Changeset attached | => occt master 4525373b |
2015-11-20 12:07 | bugmaster | Status | tested => verified |
2015-11-20 12:07 | bugmaster | Resolution | open => fixed |
2016-04-17 14:19 | git | Note Added: 0053136 | |
2016-04-20 15:42 |
|
Fixed in Version | => 7.0.0 |
2016-04-20 15:51 |
|
Status | verified => closed |