0026872: Coding - pointless instantiations of local variables in BinTools

Instantiations of local stringstream variables used in error handling moved from upper function scope to places where they are actually needed